# silver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
assets/: Malha-graus-1x2-dom-2x3.txt  Malha-graus-3x3-dom-1x1.txt  Malha-graus-3x3-dom-3x3-B.txt  Malha-graus-3x3-dom-3x3-C.txt  Malha-graus-3x3-dom-3x3.txt  Malha-graus-4x3-dom-4x4-B.txt  Malha-graus-4x3-dom-4x4.txt  Malha-small-test.txt  NURBS_3-3_3x3-G.data  in_nurbs.data  in_nurbs_esfera.data  nurbs.txt  nurbs2.txt
include/silver/: application.h  camera_3d.h  camera_controller_widget.h  canvas.h  geometry_selection_widget.h  i_node.h  i_widget.h  main.h  nurbs.h  object_3d.h  projection_3d.h  triangle.h  utils.h  window.h
src/: camera.cpp  camera_controller_widget.cpp  canvas.cpp  geometry_selection_widget.cpp  main.cpp  nurbs.cpp  object_3d.cpp  projection_3d.cpp  utils.cpp  utils_test.cpp  window.cpp
